# SourceGraph

./: .gitignore  .travis.yml  Analyse.hs  CabalInfo.hs  ChangeLog  KnownProblems.txt  Main.hs  Parsing.hs  ParsingProblems.txt  SourceGraph.cabal  SourceGraph.hs  TODO  TestClass.hs  setVersion.sh
Analyse/: Colors.hs  Everything.hs  GraphRepr.hs  Imports.hs  Module.hs  Utils.hs  Visualise.hs
Language/Haskell/SourceGraph/: Analyse.hs  CabalInfo.hs  Parsing.hs
Language/Haskell/SourceGraph/Analyse/: Colors.hs  Everything.hs  GraphRepr.hs  Imports.hs  Module.hs  Utils.hs  Visualise.hs
Language/Haskell/SourceGraph/Parsing/: ParseModule.hs  State.hs  Types.hs
Parsing/: ParseModule.hs  State.hs  Types.hs
SourceGraph/: Analyse.hs  CabalInfo.hs  Main.hs  Parsing.hs
SourceGraph/Analyse/: Colors.hs  Everything.hs  GraphRepr.hs  Imports.hs  Module.hs  Utils.hs  Visualise.hs
SourceGraph/Parsing/: ParseModule.hs  State.hs  Types.hs
