Name:                SourceGraph
Version:             0.7.0.8
Synopsis:            Static code analysis using graph-theoretic techniques.
Description: {
Statically analyse Haskell source code using graph-theoretic
techniques.  Sample reports can be found at:
<http://code.haskell.org/~ivanm/Sample_SourceGraph/SampleReports.html>
.
To use SourceGraph, call it as either:
.
> SourceGraph path/to/Foo.cabal
.
Or, if your project doesn't use Cabal, then there is limited support
for using an overall module from your program\/library:
.
> SourceGraph path/to/Foo.hs
.
Note that the Cabal method is preferred, as it is better able to
determine the project name and exported modules (when passing a
Haskell file to SourceGraph, it uses that module's name as the overall
name of project and assumes that it is the only exported module; as
such, it works better for programs than libraries).
.
Whichever way you run SourceGraph, it then creates a @SourceGraph@
subdirectory in the same directory as the file that was passed to it,
and within that subdirectory creates the analysis report in
@Foo.html@.
.
SourceGraph is still experimental in terms of its ability to parse and
properly understand Haskell source code and in the types of analyses
it performs.
}

Category:            Development
License:             GPL
License-file:        COPYRIGHT
Copyright:           (c) Ivan Lazar Miljenovic
Author:              Ivan Lazar Miljenovic
Maintainer:          Ivan.Miljenovic@gmail.com
Cabal-Version:       >= 1.6
Build-Type:          Simple
Extra-Source-Files: TODO
                    ChangeLog

Tested-With:         GHC == 8.4.2

Source-Repository head
    Type:         git
    Location:     https://github.com/ivan-m/SourceGraph

Library
  exposed-modules: Language.Haskell.SourceGraph.Analyse.Colors,
                   Language.Haskell.SourceGraph.Analyse.Everything,
                   Language.Haskell.SourceGraph.Analyse.GraphRepr,
                   Language.Haskell.SourceGraph.Analyse.Imports,
                   Language.Haskell.SourceGraph.Analyse.Module,
                   Language.Haskell.SourceGraph.Analyse.Utils,
                   Language.Haskell.SourceGraph.Analyse.Visualise,
                   Language.Haskell.SourceGraph.Parsing.ParseModule,
                   Language.Haskell.SourceGraph.Parsing.State,
                   Language.Haskell.SourceGraph.Parsing.Types,
                   Language.Haskell.SourceGraph.Analyse,
                   Language.Haskell.SourceGraph.Parsing
  Hs-source-dirs:   .
  Other-Modules: Paths_SourceGraph
  Build-Depends:        base == 4.*,
                        containers,
                        multiset,
                        filepath,
                        random,
                        directory,
                        mtl,
                        fgl == 5.6.*,
                        Graphalyze >= 0.15,
                        graphviz >= 2999.20 && < 2999.21,
                        Cabal == 2.2.*,
                        haskell-src-exts == 1.20.*

Executable SourceGraph {

    Main-Is:            SourceGraph.hs
    Other-Modules:      Language.Haskell.SourceGraph.CabalInfo,
                        Language.Haskell.SourceGraph.Parsing,
                        Language.Haskell.SourceGraph.Parsing.ParseModule,
                        Language.Haskell.SourceGraph.Parsing.State,
                        Language.Haskell.SourceGraph.Parsing.Types,
                        Language.Haskell.SourceGraph.Analyse,
                        Language.Haskell.SourceGraph.Analyse.Utils,
                        Language.Haskell.SourceGraph.Analyse.Colors,
                        Language.Haskell.SourceGraph.Analyse.GraphRepr,
                        Language.Haskell.SourceGraph.Analyse.Visualise,
                        Language.Haskell.SourceGraph.Analyse.Module,
                        Language.Haskell.SourceGraph.Analyse.Imports,
                        Language.Haskell.SourceGraph.Analyse.Everything,
                        Paths_SourceGraph
    Ghc-Options:        -Wall
    Ghc-Prof-Options:   -prof

    Build-Depends:      base == 4.*,
                        containers,
                        multiset,
                        filepath,
                        random,
                        directory,
                        mtl,
                        fgl == 5.6.*,
                        Graphalyze >= 0.15,
                        graphviz >= 2999.20 && < 2999.21,
                        Cabal == 2.2.*,
                        haskell-src-exts == 1.20.*
}
