cabal-version: 2.2
name: SourceGraph
version: 0.7.0.8
author: Ivan Lazar Miljenovic
maintainer: Ivan.Miljenovic@gmail.com
synopsis: Static code analysis using graph-theoretic techniques.
description:
  Statically analyse Haskell source code using graph-theoretic
  techniques.  Sample reports can be found at:
  <http://code.haskell.org/~ivanm/Sample_SourceGraph/SampleReports.html>
  .
  To use SourceGraph, call it as either:
  .
  > SourceGraph path/to/Foo.cabal
  .
  Or, if your project doesn't use Cabal, then there is limited support
  for using an overall module from your program\/library:
  .
  > SourceGraph path/to/Foo.hs
  .
  Note that the Cabal method is preferred, as it is better able to
  determine the project name and exported modules (when passing a
  Haskell file to SourceGraph, it uses that module's name as the overall
  name of project and assumes that it is the only exported module; as
  such, it works better for programs than libraries).
  .
  Whichever way you run SourceGraph, it then creates a @SourceGraph@
  subdirectory in the same directory as the file that was passed to it,
  and within that subdirectory creates the analysis report in
  @Foo.html@.
  .
  SourceGraph is still experimental in terms of its ability to parse and
  properly understand Haskell source code and in the types of analyses
  it performs.
category: Development
license-file: COPYRIGHT
tested-with: GHC == 8.4.2
extra-source-files: ChangeLog TODO
build-type: Simple
copyright: (c) Ivan Lazar Miljenovic

library
  hs-source-dirs: .
  exposed-modules:
    Language.Haskell.SourceGraph.Analyse
    Language.Haskell.SourceGraph.Analyse.Colors
    Language.Haskell.SourceGraph.Analyse.Everything
    Language.Haskell.SourceGraph.Analyse.GraphRepr
    Language.Haskell.SourceGraph.Analyse.Imports
    Language.Haskell.SourceGraph.Analyse.Module
    Language.Haskell.SourceGraph.Analyse.Utils
    Language.Haskell.SourceGraph.Analyse.Visualise
    Language.Haskell.SourceGraph.Parsing
    Language.Haskell.SourceGraph.Parsing.ParseModule
    Language.Haskell.SourceGraph.Parsing.State
    Language.Haskell.SourceGraph.Parsing.Types
  build-depends:
    , base == 4.*
    , Cabal >= 2.2
    , containers
    , directory
    , fgl >= 5.6
    , filepath
    , Graphalyze >= 0.15
    , graphviz >= 2999.20
    , haskell-src-exts >= 1.21
    , mtl
    , multiset
    , random
  other-modules: Paths_SourceGraph

executable SourceGraph
  main-is: SourceGraph.hs
  build-depends:
    , base == 4.*
    , Cabal >= 2.2
    , containers
    , directory
    , fgl >= 5.6
    , filepath
    , Graphalyze >= 0.15
    , graphviz >= 2999.20
    , haskell-src-exts >= 1.20
    , mtl
    , multiset
    , random
  ghc-options: -Wall
  other-modules:
    Language.Haskell.SourceGraph.CabalInfo,
    Language.Haskell.SourceGraph.Parsing,
    Language.Haskell.SourceGraph.Parsing.ParseModule,
    Language.Haskell.SourceGraph.Parsing.State,
    Language.Haskell.SourceGraph.Parsing.Types,
    Language.Haskell.SourceGraph.Analyse,
    Language.Haskell.SourceGraph.Analyse.Utils,
    Language.Haskell.SourceGraph.Analyse.Colors,
    Language.Haskell.SourceGraph.Analyse.GraphRepr,
    Language.Haskell.SourceGraph.Analyse.Visualise,
    Language.Haskell.SourceGraph.Analyse.Module,
    Language.Haskell.SourceGraph.Analyse.Imports,
    Language.Haskell.SourceGraph.Analyse.Everything,
    Paths_SourceGraph
  ghc-prof-options: -prof

source-repository head
  type: git
  location: https://github.com/ivan-m/SourceGraph
